--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,5 +4,71 @@
  "Question1":"What are you up to? How did you get started with p5.js?",
  "Question2":"How did you use p5.js in this project?",
  "Question3":"What's your favorite p5.js feature?",
- "Question4":"Did you face any challenges working on this project? If so, how did you overcome them?"
+ "Question4":"Did you face any challenges working on this project? If so, how did you overcome them?",
+ "About":"What is p5.js showcase?",
+ "showcase":[
+    {
+    "id": "airi-flies",
+    "title": "Airi Flies",
+    "image": "airi-flies.png",
+    "description": "In this game developed with p5.play, help Airi fly by saying PEW.",
+    "location":"Kyiv, Ukraine",
+    "author": "Phuong Ngo",
+    "pronouns": "she/her",
+    "type": "game",
+    "resources":
+    [ 
+        {
+        "name":"Play Airi Flies!",
+        "link": "https://www.yonaymoris.me/AiriFlies/"
+        },
+        { 
+        "name":"Code for AiriFlies on GitHub",
+        "link": "https://github.com/yonaymoris/AiriFlies"
+        },
+        {
+        "name":"More info in Phuong Ngo's portfolio",
+        "link": "https://www.yonaymoris.me/projects/airiflies"
+    }
+    ],
+        
+    "tools": "ml5.js,p5.play",
+    
+    "qanda": {
+        "answer1":"I'm a creative coder and designer, a [School of Machines, Making & Make-Believe diversity scholarship recipient](https://schoolofma.org/), and just a curious creature.\n\nI was taking a course at the [School of Machines](https://schoolofma.org/bots.html) in Berlin this summer called \"Bots and Machine Learning,\" mainly taught by [Yining Shi](https://1023.io/).",
+        "answer2":"I used p5.js to work on the visual part of the game. The animation sprites for Airi and the ghosts were drawn on an iPad app called [Pixaki](https://rizer.co/pixaki/) and then integrated into [p5.play](https://molleindustria.github.io/p5.play/) code. I mainly used examples at p5.play as a reference.\n\nFor the endless scrolling background, I found a p5 sketch by [chjno](https://editor.p5js.org/chjno/sketches/ByZlypKWM). I set a condition so whenever the word \"pew\" or a mouse click was detected, the scrolling speed would change to make an illusion of Airi flying up. When the user does not do anything, the scrolling speed is negative, which makes it look like Airi is falling down.\n\nFor sound recognition, I used [Google's Teachable Machine 2](https://teachablemachine.withgoogle.com/io19) (currently, there is a beta version not available in public yet, but it will be very soon!). I added around 120 samples of my classmates saying the word \"pew\" with different intonations and 80 samples of background noise to train it. Then I integrated the model into the game with [ml5.js](https://ml5js.org/).",
+        "answer3":"I really love how easily you can create, manipulate, and delete HTML blocks and classes with the p5.js library via [createDiv()](https://p5js.org/reference/#/p5/createDiv), [addClass()](https://p5js.org/reference/#/p5.Element/addClass) etc. But my most favorite function is [draw()](https://p5js.org/reference/#/p5/draw), since this is where you create magic.",
+        "answer4":"There were a lot of challenges simply because p5.js was something new to me. I did not work much with JavaScript in general before. Reading documentation and searching for similar examples helped a lot."
+    }
+    },
+    {
+        "id": "programmed-plotter",
+        "title": "Programmed Plotter Drawings",
+        "image": "programmed-plotter.png",
+        "description": "Sine waves and lerps generated in p5.js, exported as SVG, and drawn with a plotter and pens.",
+        "location":"Toronto, Canada",
+        "author": "Roni Cantor",  
+        "pronouns": "she/her",
+        "resources":
+        [ 
+            {
+            "name":"link1",
+            "link": "https://www.google.com/"
+            },
+            { 
+            "name":"link1",
+            "link": "https://www.google.com/"
+            }
+        ],
+        
+        "type": "game",
+        
+        "tools":"lerp()",
+        
+        "qanda": {
+            "answer1":"I'm a creative coder and designer, a School of Machines, Making & Make-Believe diversity scholarship recipient, and just a curious creature.\n\nI was taking a course at the School of Machines in Berlin this summer called \"Bots and Machine Learning,\" mainly taught by Yining Shi.",
+            "answer2":"I used p5.js to work on the visual part of the game. The animation sprites for Airi and the ghosts were drawn on an iPad app called Pixaki and then integrated into p5.play code. I mainly used examples at p5.play as a reference.\n\nFor the endless scrolling background, I found a p5 sketch by chjno. I set a condition so whenever the word \"pew\" or a mouse click was detected, the scrolling speed would change to make an illusion of Airi flying up. When the user does not do anything, the scrolling speed is negative, which makes it look like Airi is falling down.\n\nFor sound recognition, I used Google's Teachable Machine 2 (currently, there is a beta version not available in public yet, but it will be very soon!). I added around 120 samples of my classmates saying the word \"pew\" with different intonations and 80 samples of background noise to train it. Then I integrated the model into the game with ml5.js."
+        }
+        }
+]
 }
