--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -5,7 +5,9 @@
  "Question2":"¿Cómo usaste p5.js en este proyecto? ",
  "Question3":"¿Cuál es tu función favorita de p5.js? ",
  "Question4":"¿Enfrentó algún desafío al trabajar en este proyecto? Si es así, ¿cómo los superaste? ",
- "About":"What is p5.js showcase!",
+ "Question5":"¿Qué es algo cool que deberíamos explorar?",
+ "About":"What is p5.js showcase?",
+ "AboutIntro":"Presentamos Showcase, creada por [Ashley Kang](https://ashleykang.dev) en 2019 y actualmente curada por [Connie Liu](https://connieliu0.github.io). Estamos celebrando cómo las personas usan p5.js para hacer que trabajos creativos, el aprendizaje y fuente abierta sean más interesantes e inclusivos. Juntos, hacemos una comunidad. Durante el verano de 2020, le pedimos a creadores que compartieran cómo usan p5.js en variados proyectos y piezas. Durante el verano 2020, Showcase está abierto a postulaciones, ¡nomina el trabajo con p5.js de alguien o el tuyo para ser incluid aquí!",
  "Welcome":"¡Bienvenido a p5.js 2020 Showcase!",
  "showcase":[
     {
@@ -15,7 +17,7 @@
     "description": "En este juego desarrollado con p5.play, ayuda a Airi volar diciendo PEW.",
     "location":"De Kiev, Ucrania",
     "author": "Phuong Ngo",
-    "pronouns": "she/her",
+    "pronouns": "ella",
     "type": "game",
     "resources":
     [ 
@@ -34,12 +36,17 @@
     ],
         
     "tools": "ml5.js,p5.play",
-    
+    "socials":[{
+        "name":"sitio Web",
+        "link": "https://www.yonaymoris.me/"
+        }
+    ],
     "qanda": {
         "answer1":"Soy una programadora y diseñadora creativa, un receptor de la beca de diversidad [School of Machines, Making & Make-Believe diversity scholarship recipient](https://schoolofma.org/), y solo una criatura curiosa.\n\nEstaba tomando un curso en la Escuela de Máquinas en Berlín este verano llamado \"Bots and Machine Learning\", principalmente impartido por[Yining Shi](https://1023.io/).",
-        "answer2":"I used p5.js to work on the visual part of the game. The animation sprites for Airi and the ghosts were drawn on an iPad app called [Pixaki](https://rizer.co/pixaki/) and then integrated into [p5.play](https://molleindustria.github.io/p5.play/) code. I mainly used examples at p5.play as a reference.\n\nFor the endless scrolling background, I found a p5 sketch by [chjno](https://editor.p5js.org/chjno/sketches/ByZlypKWM). I set a condition so whenever the word \"pew\" or a mouse click was detected, the scrolling speed would change to make an illusion of Airi flying up. When the user does not do anything, the scrolling speed is negative, which makes it look like Airi is falling down.\n\nFor sound recognition, I used [Google's Teachable Machine 2](https://teachablemachine.withgoogle.com/io19) (currently, there is a beta version not available in public yet, but it will be very soon!). I added around 120 samples of my classmates saying the word \"pew\" with different intonations and 80 samples of background noise to train it. Then I integrated the model into the game with [ml5.js](https://ml5js.org/).",
-        "answer3":"I really love how easily you can create, manipulate, and delete HTML blocks and classes with the p5.js library via [createDiv()](https://p5js.org/reference/#/p5/createDiv), [addClass()](https://p5js.org/reference/#/p5.Element/addClass) etc. But my most favorite function is [draw()](https://p5js.org/reference/#/p5/draw), since this is where you create magic.",
-        "answer4":"There were a lot of challenges simply because p5.js was something new to me. I did not work much with JavaScript in general before. Reading documentation and searching for similar examples helped a lot."
+        "answer2":"Usé p5.js para trabajar en la parte visual del juego. Los sprites de animación para Airi y los fantasmas se dibujaron en una aplicación para iPad llamada [Pixaki](https://rizer.co/pixaki/) y luego se integraron en el código [p5.play](https://molleindustria.github.io/p5.play/). Principalmente utilicé ejemplos en p5.play como referencia.\n\nPara el fondo de desplazamiento sin fin, encontré un [chjno](https://editor.p5js.org/chjno/sketches/ByZlypKWM). Establecí una condición para que cada vez que se detectara la palabra \"pew\" o un clic del mouse, la velocidad de desplazamiento cambiara para crear una ilusión de Airi volando hacia arriba. Cuando el usuario no hace nada, la velocidad de desplazamiento es negativa, hace que parezca que Airi se está cayendo.\n\n Para el reconocimiento de sonido, utilicé [Google's Teachable Machine 2](https://teachablemachine.withgoogle.com/io19) (actualmente, hay una versión beta que aún no está disponible en público, ¡pero lo estará muy pronto!). Agregué alrededor de 120 muestras de mis compañeros de clase diciendo la palabra \"pew\" con diferentes entonaciones y 80 muestras de ruido de fondo para entrenarlo. Luego integré el modelo en el juego con [ml5.js](https://ml5js.org/).",
+        "answer3":"Realmente me encanta lo fácil que se puede crear, manipular y eliminar bloques y clases HTML con la p5.js library a través de [createDiv()](https://p5js.org/reference/#/p5/createDiv), [addClass()](https://p5js.org/reference/#/p5.Element/addClass) etc. Pero mi función favorita es.",
+        "answer4":"Hubieron muchos desafíos simplemente porque p5.js era algo nuevo para mí. No había trabajado mucho con JavaScript en general antes. Leer documentación y buscar ejemplos similares ayudó mucho.",
+        "answer5":"[@gandyworks](https://www.instagram.com/gandyworks/) en Instagram: cosas de plotter análogo súper geniales.."
     }
     },
     {
@@ -47,28 +54,32 @@
         "title": "Programmed Plotter Drawings",
         "image": "programmed-plotter.png",
         "description": "Ondas senoidales y lerps generadas en p5.js, exportados como SVG y dibujados con un plotter y bolígrafos.",
-        "location":"Toronto, Canada",
+        "location":"De Toronto, Canadá",
         "author": "Roni Cantor",  
         "pronouns": "she/her",
         "resources":
         [ 
             {
-            "name":"link1",
-            "link": "https://www.google.com/"
-            },
-            { 
-            "name":"link1",
-            "link": "https://www.google.com/"
+            "name":"",
+            "link": ""
             }
         ],
         
         "type": "game",
         
         "tools":"lerp()",
-        
+
+        "socials":[{
+            "name":"sitio Web",
+            "link":"https://www.yonaymoris.me"
+        }
+        ],
         "qanda": {
-            "answer1":"I'm a creative coder and designer, a School of Machines, Making & Make-Believe diversity scholarship recipient, and just a curious creature.\n\nI was taking a course at the School of Machines in Berlin this summer called \"Bots and Machine Learning,\" mainly taught by Yining Shi.",
-            "answer2":"I used p5.js to work on the visual part of the game. The animation sprites for Airi and the ghosts were drawn on an iPad app called Pixaki and then integrated into p5.play code. I mainly used examples at p5.play as a reference.\n\nFor the endless scrolling background, I found a p5 sketch by chjno. I set a condition so whenever the word \"pew\" or a mouse click was detected, the scrolling speed would change to make an illusion of Airi flying up. When the user does not do anything, the scrolling speed is negative, which makes it look like Airi is falling down.\n\nFor sound recognition, I used Google's Teachable Machine 2 (currently, there is a beta version not available in public yet, but it will be very soon!). I added around 120 samples of my classmates saying the word \"pew\" with different intonations and 80 samples of background noise to train it. Then I integrated the model into the game with ml5.js."
+            "answer1":"Me acabo de graduar del programa de Nuevos Medios (New Media) de la Universidad de Ryerson. Después de 4 años de programación y fabricación de robots, decidí tomar un descanso y jugar con algunas formas de arte más tradicionales, mientras que todavía programando y jugando con robots. ¡Comencé a usar p5.js en [NYU ITP Camp](https://itp.nyu.edu/camp2019/)! \n\nDespués de usar Processing durante muchos años, quería probar algo nuevo.",
+            "answer2":"Utilicé p5.js en este proyecto para generar las fórmulas de onda sinusoidal y lerp (interpolación lineal) y mostrar las imágenes en el [p5.js Web Editor](https://editor.p5js.org/). Luego usé una función en mi código que exportaba mi gráfico programado a un archivo [SVG](https://developer.mozilla.org/en-US/docs/Web/SVG). Necesitaba un archivo SVG para darle al plotter, un [AxiDraw V3](https://shop.evilmadscientist.com/productsmenu/846), para que entendiera dónde dibujar las líneas que programé. ¡Envié esta información al trazador con un programa llamado [Inkscape](https://inkscape.org/)",
+            "answer3":"[lerp()](https://p5js.org/reference/#/p5/lerp) porque las líneas son divertidas y \"lerp\" es una palabra divertida para decir!",
+            "answer4":"¡Era la primera vez que usaba p5.js, Inkscape y un plotter! Realmente me beneficié de las personas a mi alrededor que habían usado p5 antes, así como de guías y foros en línea.",
+            "answer5":"[@gandyworks](https://www.instagram.com/gandyworks/) en Instagram: cosas de plotter análogo súper geniales.."
         }
         }
 ]
