preliminary copy for the showcase ready for translation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,22 +1,46 @@
 {"Created By":"Created By",
  "Project Links": "Project Links",
+ "Visualizations":"Visualizations",
+ "Projects":"Projects",
  "Tools":"Tools",
  "Live":"Live",
  "Code":"Code",
- "About1":"What is the p5.js showcase?",
+ "About1":"What is the p5.js Showcase?",
  "About2":"How is it organized?",
  "About3":"What else should I check out?",
- "Answer1": "The p5.js showcase is an online gallery of work created with [p5.js](https://p5js.org/), an open source creative computing library. It was created by [Ashley Kang](https://ashleykang.dev) in 2019 ([view the 2019 showcase here](https://p5js.org/showcase/)) and currently curated by [Connie Liu](https://connieliu0.github.io). \n \n The purpose of the showcase is to celebrate how people are using and learning p5.js to make creative work with the aim of conveying our core values of inclusivity.",
- "Answer2":"Usually the p5.js will open up a call for submissions via [Twitter](https://twitter.com/p5xjs) or [Instagram](https://www.instagram.com/p5xjs/)! For the last two years, the showcase has been run as a [GSoC project](https://summerofcode.withgoogle.com/).",
+ "Answer1": "The p5.js Showcase is an online gallery of work created with [p5.js](https://p5js.org/), an open source creative computing library. It was created by [Ashley Kang](https://ashleykang.dev) in 2019 ([view the 2019 Showcase here](https://p5js.org/showcase/)) and currently curated by [Connie Liu](https://connieliu0.github.io). \n \n The purpose of the Showcase is to celebrate how people are using and learning p5.js to make creative work with the aim of conveying our core values of inclusivity.",
+ "Answer2":"Usually the p5.js will open up a call for submissions via [Twitter](https://twitter.com/p5xjs) or [Instagram](https://www.instagram.com/p5xjs/)! For the last two years, the Showcase has been run as a [GSoC project](https://summerofcode.withgoogle.com/).",
  "Answer3":"Make some sketches of your own with the [p5.js editor](https://editor.p5js.org/), discover more with [OpenProcessing](https://www.openprocessing.org/), and learn more with the [Coding Train](https://www.youtube.com/user/shiffman) and [Cozy Coding](https://www.twitch.tv/cozycoding/)!",
  "Question1":"What are you up to? How did you get started with p5.js?",
  "Question2":"How did you use p5.js in this project?",
  "Question3":"What's your favorite p5.js feature?",
  "Question4":"Did you face any challenges working on this project? If so, how did you overcome them?",
  "Question5":"What's a cool thing we should check out?",
- "2019about": "Curated by [Ashley Kang](https://ashleykang.dev/) in the summer of 2019, below is the first ever curated collection of the p5.js showcase! Learn more about each one by clicking on the preview. \n \n[View the original implementation here!](https://p5js.org/showcase/)",
+ "2019about": "Curated by [Ashley Kang](https://ashleykang.dev/) in the summer of 2019, below is the first ever curated collection of the p5.js Showcase! Learn more about each one by clicking on the preview. \n \n[View the original implementation here!](https://p5js.org/showcase/)",
  "About":"About the p5.js Showcase",
  "Welcome":"Welcome to the p5.js 2020 showcase!",
+ "2020_intro1":"During Summer 2020 we asked the p5.js community around the world to submit their pieces for a new and expanded edition of the Showcase. Below you'll find all kinds of works ranging from sound-based visualizations to educational games to mathematical simulations.",
+ "2020_intro1.5":"Personally as the curator for this year's Showcase, I can only describe the experience in one word: _inspired_. The amount of passion and creative curiosity that beams from everyone's work has me in awe - and I truly believes encapsulates the spirit of the p5.js community.",
+ "2020_intro2":"Learn more about the p5.js community below!",
+ "Viz1":"this year we got submissions from...",
+ "Viz2":"our submitters are...",
+ "Viz3":"to them p5.js is...",
+ "Viz4":"view the projects!",
+ "Jump to":"Jump to:",
+ "filters":[
+    {"name": "All"},
+    {"name": "Visual"},
+    {"name": "Data Visualization"},
+    {"name": "Game"},
+    {"name": "World"},
+    {"name": "Text"},
+    {"name": "Sound"},
+    {"name": "Educational"},
+    {"name": "Teaching"},
+    {"name": "Simulation"},
+    {"name": "Tool"},
+    {"name": "Camera"}
+ ],
  "showcase2019":[
     {
     "id": "airi-flies",
