--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -1,11 +1,16 @@
 {"Created By":"Created By",
  "Project Links": "Project Links",
+ "Visualizations":"Visualizations",
+ "Projects":"Projects",
  "Tools":"Tools",
  "Live":"看",
  "Code":"Code",
  "About1":"What is the p5.js showcase?",
  "About2":"How is it organized?",
- "About3":"What are other cool initiatves with the p5.js community?",
+ "About3":"What else should I check out?",
+ "Answer1": "The p5.js showcase is an online gallery of work created with [p5.js](https://p5js.org/), an open source creative computing library. It was created by [Ashley Kang](https://ashleykang.dev) in 2019 ([view the 2019 showcase here](https://p5js.org/showcase/)) and currently curated by [Connie Liu](https://connieliu0.github.io). \n \n The purpose of the showcase is to celebrate how people are using and learning p5.js to make creative work with the aim of conveying our core values of inclusivity.",
+ "Answer2":"Usually the p5.js will open up a call for submissions via [Twitter](https://twitter.com/p5xjs) or [Instagram](https://www.instagram.com/p5xjs/)! For the last two years, the showcase has been run as a [GSoC project](https://summerofcode.withgoogle.com/).",
+ "Answer3":"Make some sketches of your own with the [p5.js editor](https://editor.p5js.org/), discover more with [OpenProcessing](https://www.openprocessing.org/), and learn more with the [Coding Train](https://www.youtube.com/user/shiffman) and [Cozy Coding](https://www.twitch.tv/cozycoding/)!",
  "Question1":"What are you up to? How did you get started with p5.js?",
  "Question2":"How did you use p5.js in this project?",
  "Question3":"What's your favorite p5.js feature?",
@@ -15,6 +20,20 @@
  "About":"About the p5.js Showcase",
  "AboutIntro":"Introducing Showcase, created by [Ashley Kang](https://ashleykang.dev) in 2019 and currently curated by [Connie Liu](https://connieliu0.github.io). We're celebrating how people are using p5.js to make creative work, learning, and open source more interesting and inclusive. Together, we make community. During Summer 2019, we asked a few creators to share more about how they've used p5.js through different projects and pieces.",
  "Welcome":"Welcome to the p5.js 2020 showcase!",
+ "filters":[
+    {"name": "All"},
+    {"name": "Visual"},
+    {"name": "Data Visualization"},
+    {"name": "Game"},
+    {"name": "World"},
+    {"name": "Text"},
+    {"name": "Sound"},
+    {"name": "Educational"},
+    {"name": "Teaching"},
+    {"name": "Simulation"},
+    {"name": "Tool"},
+    {"name": "Camera"}
+ ],
  "showcase2019":[
     {
     "id": "airi-flies",
