--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,4 +1,5 @@
 {"Created By":"Creado Por",
+"2020Gallery_Intro":"To learn more about the project and how it was made, click on the image of each card preview. Also feel free to leave feedback or a comment in our [guestbook](https://forms.gle/nJ4Z6v31z2HZ6boaA)!",
  "Project Links":"Enlaces de proyectos",
  "Visualizations":"Visualizations",
  "Projects":"Projects",
