--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -1,4 +1,5 @@
 {"Created By":"Created By",
+    "2020Gallery_Intro":"To learn more about the project and how it was made, click on the image of each card preview. Also feel free to leave feedback or a comment in our [guestbook](https://forms.gle/nJ4Z6v31z2HZ6boaA)!",
     "Project Links": "Project Links",
     "Visualizations":"Visualizations",
     "Projects":"Projects",
